# mmap-guard

./: .coderabbitai.yaml  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .mdformat.toml  .mergify.yml  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOTCHAS.md  LICENSE-MIT  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  about.hbs  about.toml  cliff.toml  codecov.yml  deny.toml  justfile  mise.toml  release-plz.toml  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: audit.yml  ci.yml  compat.yml  docs.yml  fuzz.yml  release-plz.yml  scorecard.yml  security.yml
docs/: book.toml
docs/src/: SUMMARY.md  api-reference.md  architecture.md  development.md  getting-started.md  integration.md  introduction.md  release-process.md  safety.md  security-assurance.md  testing.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_map_file.rs  fuzz_read_bounded.rs
src/: file_data.rs  lib.rs  load.rs  map.rs
tests/: prop_map_file.rs
